--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-router-prop-types": "^1.0.5",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
