--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-router-dom": "^5.3.0",
     "react-router-prop-types": "^1.0.5",
     "react-scripts": "4.0.3",
+    "react-xml-parser": "^1.1.8",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
-    "web-vitals": "^1.0.1"
+    "request": "^2.88.2",
+    "web-vitals": "^1.0.1",
+    "xml-js": "^1.6.11"
   },
   "scripts": {
     "start": "react-scripts start",
