Chore: gitignore 수정 resolved:#76

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,14 @@
 # production
 /build
 
+#API KEY
+.env.development
+.env
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
-.env.development
 .env.test.local
 .env.production.local
 
