--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-router-prop-types": "^1.0.5",
@@ -22,6 +23,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "request": "^2.88.2",
+    "swr": "^1.3.0",
     "web-vitals": "^1.0.1",
     "xml-js": "^1.6.11"
   },
